2008-01-20  Ankit Jain  <jankit@novell.com>

	* templates/EmptyXMLFile.xft.xml:
	* templates/EmptyTextFile.xft.xml: Set BuildAction to Nothing.

2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Dispose the command manager when
	  closing MD. Should fix bug #349484.

2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.mdp, gtk-gui/gui.stetic,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.ReplaceDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.SelectReferenceDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.TasksPanelWidget.cs: Updated.

2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs: Queue.Peek returns the head
	  of the queue, not the tail. Use a field to store the last text write
	  request. Made buffer bigger and reduced timeout for updating the
	  textview.
	* MonoDevelop.Ide.Gui/OutputProgressMonitor.cs: Make it subclass
	  NullProgessMonitor since this class is now gui thread safe.

2008-01-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/OutputProgressMonitor.cs: Avoid going through the gui
	  thread to get some simple property values. Fixes bug #354061.
	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs: Add missing
	  length check.

2008-01-16  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui/IdeStartup.cs: Remove dead code.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplate.cs,
	  MonoDevelop.Ide.Templates/ProjectTemplate.cs,
	  templates/EmptyEnum.xft.xml, templates/EmptyHTMLFile.xft.xml,
	  templates/EmptyStruct.xft.xml, templates/EmptyTextFile.xft.xml,
	  templates/EmptyClass.xft.xml, templates/AppConfigFile.xft.xml,