@@ -1,3 +1,9 @@
+2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs: If a project is selected in
+	  the solution tree, activate the 'add to project' option by default.
+	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Added missing null check.
+
 2008-01-20  Ankit Jain  <jankit@novell.com>
 
 	* templates/EmptyXMLFile.xft.xml:
